kubernetes/apps/flux-system/headlamp/app/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      conditions: ["len([BODY]) == 0"]
      dns:
        query-name: headlamp.unscfleet.com
        query-type: A
      url: 1.1.1.1
spec:
  hostnames: ["headlamp.unscfleet.com"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: headlamp
          namespace: flux-system
          port: 80
