kubernetes/apps/flux-system/headlamp/app/networkpolicy.yaml
# kubernetes/apps/flux-system/headlamp/app/networkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: headlamp-ingress
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: headlamp
      app.kubernetes.io/name: headlamp
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "4466"
              protocol: TCP
